-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Fixed
-
Affects Version/s: 5.9.4, 5.9.5
-
Fix Version/s: 5.12.5
-
Component/s: Multimedia
-
Labels:None
-
Environment:Windows 10 (msvc2015-x86) on Windows 10 (msvc2015-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure Windows 10 (msvc2015-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure
Windows 10 (msvc2017-x86) - DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure
Windows 10 (msvc2017-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailureWindows 10 (msvc2015-x86) on Windows 10 (msvc2015-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure Windows 10 (msvc2015-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure Windows 10 (msvc2017-x86) - DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure Windows 10 (msvc2017-x86_64) - Packaging, DebugAndRelease, Release, ForceDebugInfo, OpenGLDynamic, AbortTestingOnFirstFailure
https://codereview.qt-project.org/#/c/215467/ Update submodules on '5.9.4' in qt5
https://codereview.qt-project.org/#/c/215784/ Fix Android provisioning script
https://codereview.qt-project.org/#/c/215602/ Provisioning: Ubuntu16.04 - CMake
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1515131568
C:\utils\jom\jom.exe -f Makefile.Release check call C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend\target_wrapper.bat release\tst_qmediaplayerbackend.exe -o C:\Users\qt\work\testresults\tests\auto\integration\qmediaplayerbackend184308079,xml -o -,txt ********* Start testing of tst_QMediaPlayerBackend ********* Config: Using QtTest library 5.9.4, Qt 5.9.4 (i386-little_endian-ilp32 shared (dynamic) release build; by MSVC 2017) PASS : tst_QMediaPlayerBackend::initTestCase() PASS : tst_QMediaPlayerBackend::construction() FAIL! : tst_QMediaPlayerBackend::loadMedia() Compared values are not the same tst_qmediaplayerbackend.cpp(276) : failure location FAIL! : tst_QMediaPlayerBackend::unloadMedia() Compared values are not the same tst_qmediaplayerbackend.cpp(296) : failure location QWARN : tst_QMediaPlayerBackend::loadMediaInLoadingState() DirectShowPlayerService::doSetUrlSource: Unresolved error code 0x800c0005 (The system cannot locate the resource specified.) PASS : tst_QMediaPlayerBackend::loadMediaInLoadingState() FAIL! : tst_QMediaPlayerBackend::playPauseStop() Compared values are not the same tst_qmediaplayerbackend.cpp(384) : failure location FAIL! : tst_QMediaPlayerBackend::processEOS() Compared values are not the same tst_qmediaplayerbackend.cpp(507) : failure location FAIL! : tst_QMediaPlayerBackend::deleteLaterAtEOS() 'player.isNull()' returned FALSE. () tst_qmediaplayerbackend.cpp(640) : failure location PASS : tst_QMediaPlayerBackend::volumeAndMuted() PASS : tst_QMediaPlayerBackend::volumeAcrossFiles(100 unmuted) PASS : tst_QMediaPlayerBackend::volumeAcrossFiles(50 unmuted) PASS : tst_QMediaPlayerBackend::volumeAcrossFiles(0 unmuted) PASS : tst_QMediaPlayerBackend::volumeAcrossFiles(100 muted) PASS : tst_QMediaPlayerBackend::volumeAcrossFiles(50 muted) PASS : tst_QMediaPlayerBackend::volumeAcrossFiles(0 muted) FAIL! : tst_QMediaPlayerBackend::initialVolume() Compared values are not the same tst_qmediaplayerbackend.cpp(756) : failure location SKIP : tst_QMediaPlayerBackend::seekPauseSeek() No supported video file tst_qmediaplayerbackend.cpp(773) : failure location SKIP : tst_QMediaPlayerBackend::seekInStoppedState() No supported video file tst_qmediaplayerbackend.cpp(847) : failure location SKIP : tst_QMediaPlayerBackend::subsequentPlayback() Sound format is not supported tst_qmediaplayerbackend.cpp(971) : failure location SKIP : tst_QMediaPlayerBackend::probes() No supported video file tst_qmediaplayerbackend.cpp(1006) : failure location SKIP : tst_QMediaPlayerBackend::playlist() QMediaPlayer does not support loading M3U playlists as QMediaPlaylist tst_qmediaplayerbackend.cpp(1057) : failure location FAIL! : tst_QMediaPlayerBackend::playlistObject() Compared values are not the same Actual (currentMediaSpy.count()): 2 Expected (1) : 1 tst_qmediaplayerbackend.cpp(1225) : failure location SKIP : tst_QMediaPlayerBackend::surfaceTest(RGB formats) No supported video file tst_qmediaplayerbackend.cpp(1372) : failure location SKIP : tst_QMediaPlayerBackend::surfaceTest(YVU formats) No supported video file tst_qmediaplayerbackend.cpp(1372) : failure location SKIP : tst_QMediaPlayerBackend::surfaceTest(RGB & YUV formats) No supported video file tst_qmediaplayerbackend.cpp(1372) : failure location SKIP : tst_QMediaPlayerBackend::metadata() No supported media file tst_qmediaplayerbackend.cpp(1391) : failure location PASS : tst_QMediaPlayerBackend::cleanupTestCase() Totals: 11 passed, 7 failed, 9 skipped, 0 blacklisted, 82574ms ********* Finished testing of tst_QMediaPlayerBackend ********* jom: C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend\Makefile.Release [check] Error 7 jom: C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend\Makefile [release-check] Error 2 agent:2018/01/05 06:04:31 build.go:203: Process finished with error: exit status 2 agent:2018/01/05 06:04:31 build.go:155: Error reading from stdout/err: exit status 2 agent:2018/01/05 06:04:51 build.go:279: [c:\users\qt\MSVC2017.bat jom check] 900 900 C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend>call "C:\Program Files\Microsoft Visual Studio\2017\Professional\VC\Auxiliary\Build\vcvarsall.bat" x86 ********************************************************************** ** Visual Studio 2017 Developer Command Prompt v15.0.26403.7 ** Copyright (c) 2017 Microsoft Corporation ********************************************************************** [vcvarsall.bat] Environment initialized for: 'x86' jom 1.1.2 - empower your cores C:\utils\jom\jom.exe -f Makefile.Release check call C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend\target_wrapper.bat release\tst_qmediaplayerbackend.exe loadMedia [ 0.000 D] qt.qpa.input.tablet unknown - Tablet support: "None" [ 0.000 D] qt.qpa.windows unknown - QWindowsContext::setProcessDpiAwareness 2 [ 0.000 D] qt.qpa.windows unknown - QWindowsIntegrationPrivate::QWindowsIntegrationPrivate DpiAwareness= 2 effective process DPI awareness= 2 [ 0.000 D] qt.qpa.windows unknown - QWindowsContext::registerWindowClass "Qt5ClipboardView" style=0x0 brush=0x0 icon=false atom=49517 [ 0.000 D] qt.qpa.mime unknown - QWindowsClipboard::registerViewer m_clipboardViewer: 0x150142 format listener: true next: 0x0 [ 0.001 D] qt.qpa.windows unknown - New Monitor: Screen "\\.\DISPLAY1" 1280x800+0+0 avail: 1280x760+0+0 physical: 339x212 DPI: 96x96 Depth: 32 Format: 4 hMonitor: 0x10001 primary virtual desktop [ 0.001 D] qt.qpa.fonts unknown - QWindowsFontDatabase::systemDefaultFont QFont( "MS Shell Dlg 2,8.25,-1,5,50,0,0,0,0,0" ) [ 0.002 D] qt.qpa.windows unknown - QWindowsTheme::refreshIconPixmapSizes (QSize(16, 16), QSize(32, 32), QSize(48, 48), QSize(256, 256)) ********* Start testing of tst_QMediaPlayerBackend ********* Config: Using QtTest library 5.9.4, Qt 5.9.4 (i386-little_endian-ilp32 shared (dynamic) release build; by MSVC 2017) PASS : tst_QMediaPlayerBackend::initTestCase() FAIL! : tst_QMediaPlayerBackend::loadMedia() Compared values are not the same tst_qmediaplayerbackend.cpp(276) : failure location PASS : tst_QMediaPlayerBackend::cleanupTestCase() Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 15624ms ********* Finished testing of tst_QMediaPlayerBackend ********* jom: C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend\Makefile.Release [check] Error 1 jom: C:\Users\qt\work\qt\qtmultimedia\tests\auto\integration\qmediaplayerbackend\Makefile [release-check] Error 2
- duplicates
-
QTBUG-46368 tst_qmediaplayerbackend fails on all platforms
-
- Closed
-