Windows: Reset position on pause in QMediaPlayer after EOS

pause() should reset position to the beginning after EOS.

Fixes tst_QMediaPlayerBackend::processEOS

Task-number: QTBUG-65574
Change-Id: I4802102bde657d7a3dde0b426c335b021207ae08
Reviewed-by: Christian Strømme <christian.stromme@qt.io>